// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`StateMessage visual snapshots > empty variant matches snapshot 1`] = `
<div
  aria-live="polite"
  class="flex flex-col items-center justify-center gap-3 py-6 px-4 text-center"
>
  <p
    class="text-sm"
  >
    No messages yet.
  </p>
</div>
`;

exports[`StateMessage visual snapshots > error variant with retry matches snapshot 1`] = `
<div
  aria-live="assertive"
  class="flex flex-col items-center justify-center gap-3 py-6 px-4 text-center text-red-600"
>
  <p
    class="text-sm"
  >
    Something went wrong.
  </p>
  <button
    class="text-sm font-medium underline focus:outline-none focus:ring-2 focus:ring-offset-2 rounded"
    type="button"
  >
    Retry
  </button>
</div>
`;

exports[`StateMessage visual snapshots > loading variant matches snapshot 1`] = `
<div
  aria-live="polite"
  class="flex flex-col items-center justify-center gap-3 py-6 px-4 text-center"
  role="status"
>
  <div
    aria-hidden="true"
    class="h-6 w-6 animate-spin rounded-full border-2 border-current border-t-transparent"
  />
  <p
    class="text-sm"
  >
    Connecting…
  </p>
</div>
`;
